# todo-list-example

./: .gitignore  Cargo.toml  Dockerfile.base  Dockerfile.benchmark  README.md  docker-compose-benchmark.yml  docker-compose-dev.yml  docker-compose-test.yml
api/: .env.example  .gitignore  Cargo.toml  benchmark.sh  docker-compose-db.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml
api/prisma/: schema.prisma
api/prisma-cli/: Cargo.toml
api/src/: error.rs  main.rs  response.rs  server.rs  task.rs
api/src/middlewares/: jwt.rs
api/src/repositories/: mod.rs  task.rs  user.rs
api/src/routes/: task.rs  user.rs
api/src/states/: app.rs
assets/: insomnia_collection.json  swagger_api.yaml
dashboard/: .env.example  pubspec.yaml
dashboard/android/: settings.gradle
dashboard/integration_test/: simple_test.dart
dashboard/lib/: main.dart
dashboard/lib/client/: singleton.dart
dashboard/lib/pages/: edit_task.dart  login.dart  new_task.dart  register.dart  tasks.dart
dashboard/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
dashboard/lib/src/rust/api/: client.dart
dashboard/linux/flutter/: generated_plugins.cmake
dashboard/rust/: Cargo.toml
dashboard/rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
dashboard/rust/src/api/: client.rs  mod.rs
dashboard/rust_builder/: pubspec.yaml
dashboard/rust_builder/android/: build.gradle  settings.gradle
dashboard/rust_builder/android/src/main/: AndroidManifest.xml
dashboard/rust_builder/cargokit/build_tool/: pubspec.yaml
dashboard/rust_builder/ios/: rust_lib_dashboard.podspec
dashboard/rust_builder/linux/: CMakeLists.txt
dashboard/rust_builder/macos/: rust_lib_dashboard.podspec
dashboard/rust_builder/windows/: CMakeLists.txt
dashboard/windows/flutter/: generated_plugins.cmake
src/: main.rs  response.rs  server.rs  task.rs  user.rs
