[package]
name = "raw-todo-list-api-example"
version = "0.1.0"
edition = "2021"
authors = ["ViniciosLugli <vinicioslugli@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
log = "0.4"
pretty_env_logger = "0.5.0"
bcrypt = "0.15.1"
base64 = "0.22.0"
